--- a/Remage/Remage/Info.plist
+++ b/Remage/Remage/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to Camera to take pictures of your Reminders</string>
 </dict>
 </plist>
